- upgraded to latest jgraph version - v5.12.1.1  - upgraded to saxon 9.1.0.1  - fixed bug for missing default predicate after xml import  - fixed bug for messed up arc colours when updating predicate detail after xml import  - removed engine id from task name in notes tab at screen bottom  - check & remove & report invalid resource references when loading specification from ywl file